Fix P0 security vulnerabilities — ZipSlip, command injection, IDOR, CORS, auth bypass
- ZipSlip: validate ZIP entry paths stay within target dir + add zip bomb guards
- Command injection: shell-escape interpolated values in FlowProcessingEngine,
  validate script paths in ScheduledTaskRunner
- FileChannel race: replace transferTo with positioned read/write for thread safety
- Partner auth: replace forgeable Base64 tokens with signed JWT, remove IDOR by
  extracting username from SecurityContext instead of query params
- Endpoints: lock down 9 overly permissive permitAll() routes, require ADMIN for CLI
- CORS: replace wildcard origins with configurable allowlist, restrict headers
- RBAC: add @PreAuthorize("hasRole('ADMIN')") to AdminCliController

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>